--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "prettier:fix": "npx prettier --write ."
   },
   "dependencies": {
-    "@docusaurus/core": "^2.0.0-beta.21",
-    "@docusaurus/preset-classic": "^2.0.0-beta.21",
+    "@docusaurus/core": "^2.0.0-rc.1",
+    "@docusaurus/preset-classic": "^2.0.0-rc.1",
     "@easyops-cn/docusaurus-search-local": "^0.27.0",
     "@mdx-js/react": "^1.6.22",
     "axios": "^0.27.2",
@@ -29,7 +29,7 @@
     "react-query": "^3.39.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^2.0.0-beta.21",
+    "@docusaurus/module-type-aliases": "^2.0.0-rc.1",
     "@tsconfig/docusaurus": "^1.0.5",
     "prettier": "^2.6.2",
     "typescript": "^4.6.4"
